# rl

./: .gitignore  pyproject.toml  ruff.toml
Proyecto/: dqn.py  reward_wrapper.py
Proyecto/plotting/: plotter.py
T1/: BanditEnv.py  BanditResults.py  BanditRun.py  Main.py  PlotResults.py  README.md
T1/agents/: BaseAgent.py  ConstantAgent.py  GradientAgent.py  RandomAgent.py  SimpleAgent.py
T2/: README.md
T2/MDPs/: Main.py
T2/MDPs/Evaluator/: find_optimal_policies.py  ipe.py  value_iteration.py
T2/MDPs/Policies/: greedy_policy.py  uniform_policy.py
T2/MDPs/Problems/: AbstractProblem.py  CookieProblem.py  GamblerProblem.py  GridLocations.py  GridProblem.py
T2/MDPs/plot/: plot_optimal_policies.py
T2/MonteCarlo/: Main.py
T2/MonteCarlo/Environments/: BlackjackEnv.py  CliffEnv.py  CliffVisualizer.py
T2/MonteCarlo/Evaluator/: mc_control_es.py
T2/MonteCarlo/plot/: plot_mc_diagnostics.py  plot_mc_policy.py  plot_mc_results.py
T3/: MainMultiAgent.py  MainMultiGoal.py  MainPartiallyObservable.py  MainSimpleEnvs.py  README.md
T3/Agents/: ModelBased.py  QLearning.py  Sarsa.py
T3/Environments/: AbstractEnv.py  GridEnv.py
T3/Environments/MultiAgentEnvs/: AbstractMultiAgentEnv.py  CentralizedHunterEnv.py  HunterAndPreyEnv.py  (+1 more)
T3/MemoryWrappers/: BinaryMemory.py  CustomKOrderMemory.py  KOrderMemory.py
T3/Plotting/: Plotter.py
T4/: FeatureExtractor.py  README.md  RandomAgent.py  pregunta_a.py  pregunta_b.py  pregunta_c.py  pregunta_d.py  tiles3.py
T4/agents/: ActorCritic.py  QLearning.py  Sarsa.py
T4/plotting/: csv_reader.py  plotter.py
(+4 files in other folders)
