[project]
name = "rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Farfán",email = "bruno.farfan.miquel@uc.cl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.11.7,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
