[project]
name = "rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Farfán",email = "bruno.farfan.miquel@uc.cl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.11.7,<0.12.0)",
    "gymnasium[classic-control] (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "stable-baselines3 (>=2.6.0,<3.0.0)",
    "polars (>=1.29.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
